--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "third-party/serial"]
 	path = third-party/serial
-	url = https://github.com/wjwwood/serial
+	url = https://github.com/crosstyan/serial
